RESOLVED FIXED26493
REGRESSION (r44758): First tab always uses Mac-style form controls
https://bugs.webkit.org/show_bug.cgi?id=26493
Summary REGRESSION (r44758): First tab always uses Mac-style form controls
Adam Roben (:aroben)
Reported 2009-06-17 14:35:20 PDT
To reproduce: 1. Launch Safari 2. Go to data:text/html,<button>test 3. Open a new tab 4. Go to data:text/html,<button>test In step 2, a Mac-style button is drawn. In step 4, a Windows-style button is drawn. This regressed in r44758 <http://trac.webkit.org/changeset/44758>.
Attachments
patch v1 + ChangeLog (3.38 KB, patch)
2009-06-17 14:45 PDT, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2009-06-17 14:36:14 PDT
Adam Roben (:aroben)
Comment 2 2009-06-17 14:37:47 PDT
The problem is that RenderTheme::themeForPage is getting called before WebPreferences has communicated its settings to WebCore::Settings. RenderTheme::themeForPage consults Settings to decide whether it should return the RenderThemeWin or RenderThemeSafari instance, but Settings hasn't been initialized yet.
Adam Roben (:aroben)
Comment 3 2009-06-17 14:45:47 PDT
Created attachment 31441 [details] patch v1 + ChangeLog
Darin Adler
Comment 4 2009-06-17 14:49:46 PDT
Comment on attachment 31441 [details] patch v1 + ChangeLog r=me I'm sad we have to work around this instead of fixing it. Too bad we didn't realize this was wrong before landing the per-page theme change!
Dave Hyatt
Comment 5 2009-06-17 14:51:50 PDT
Comment on attachment 31441 [details] patch v1 + ChangeLog r=me
Adam Roben (:aroben)
Comment 6 2009-06-17 15:10:27 PDT
Fixed in r44785
Adam Roben (:aroben)
Comment 7 2009-06-17 15:13:19 PDT
I've recorded the desire to fix the real bug in bug 26494.
Note You need to log in before you can comment on or make changes to this bug.